# frank_jwt

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  jwt.sublime-workspace  rustfmt.toml
src/: claim_set.rs  error.rs  jwt.rs  jwt_singer.rs  jwt_verifier.rs  lib.rs  main.rs
test/: ec_2_x9_62_prime256v1.public.key.pem  ec_x9_62_prime256v1.private.key.pem  ec_x9_62_prime256v1.public.key.pem  es512_private_key.pem  es512_public_key.pem  my_bad_rsa_public_2048_key.pem  my_rsa_2048_key.pem  my_rsa_public_2048_key.pem
